[project]
dependencies = []
description = "Pothole Tracking and Repair System (PTRS)"
name = "ptrs"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
ptrs = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
flask = ">=3.1.0,<4"
gunicorn = ">=23.0.0,<24"
