[project]
dependencies = [
    "flask>=3.1.0,<4",
    "python-dotenv>=1.0.1,<2",
    "xhtml2pdf<=0.2.16"
]
description = "Pothole Tracking and Repair System (PTRS)"
name = "ptrs"
requires-python = ">= 3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
